# My_Mcp_Demo

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
mcp_demo/: server_Exercise.py
