[project]
name = "mcp-example"
version = "0.1.0"
description = "An example project using mcp for email retrieval and summarization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.4.26",
    "click>=8.1.8",
    "email-validator>=2.2.0",
    "imapclient>=3.0.1",
    "mcp[cli]>=1.10.1",
    "uvicorn>=0.34.3",
    "spacy",
    "pip>=25.1.1",
]
